# local-s3-server

./: .gitignore  MIT-LICENSE  README.md  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml  publish.yml
examples/: basic_operations.py  image_handling.py
fasts3/: __init__.py  __main__.py  fastapi_server.py
locals3server/: __init__.py  __main__.py  actions.py  db.py  errors.py  fastapi_server.py  file_store.py  models.py  sigv4.py
tests/: conftest.py  test_create_another_key.py  test_create_bucket_and_key.py  test_create_nested.py  test_delete_key.py  test_delete_keys.py  test_filesystem_structure.py  test_image_copy.py  test_image_push.py  test_key_list.py  test_list_buckets.py  test_list_keys.py  test_main.py  test_presigned_url.py
