[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasts3"
version = "0.1.0"
description = "A FastAPI-based S3-compatible server for local development and testing"
readme = "README.md"
authors = [
    { name = "Wei Ouyang", email = "oeway007@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["s3", "mock", "testing", "development", "fastapi"]
dependencies = [
    "boto>=2.49.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/oeway/fasts3"
Repository = "https://github.com/oeway/fasts3.git"

[project.scripts]
fasts3 = "fasts3.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["fasts3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v" 